--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome to LDN sweet tooth!</title>
+  <title>LDN///Best Coffee in London!</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
@@ -18,7 +18,9 @@
     <div class="text centre-text"> Coffee </div>
   </a>
 </div>
-  </div>
+<div class="mapouter">
+  <div class="gmap_canvas">
+    <iframe width="400" height="600" id="gmap_canvas" src="https://maps.google.com/maps?q=296%20Kentish%20Town%20Rd%2C%20Kentish%20Town%2C%20London%20NW5%202TG&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="2" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
 
   <!-- Add Bootstrap core JavaScript (T)
   ================================================== -->
