--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="container fullpage">
   <div class="row halfheight">
     <div class="col-md-3 col-sm-12 mobileheight" >
-      <img src="./saintespresso.jpg" alt="A local image" width=200px">
+      <img src="./saintespresso.jpg" alt="A local image" width=200px>
       <a class="coffee-review" href="cofee/saintespresso2.html">
         <div class="coffeeshop">
           <h1>Saint Espresso</h1>
@@ -50,8 +50,8 @@
 <div class="mapouter">
   <div class="gmap_canvas">
     <iframe width="400" height="600" id="gmap_canvas" src="https://maps.google.com/maps?q=296%20Kentish%20Town%20Rd%2C%20Kentish%20Town%2C%20London%20NW5%202TG&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="2" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
-  <!-- Add Bootstrap core JavaScript (T)
-  ================================================== -->
+  <!-- Add Bootstrap core JavaScript (T) -->
+  <!--  ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
 
 </body>
