changed navbar titles

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>LDN///Best Coffee in London!</title>
+  <title>Welcome to LDN sweet tooth!</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
@@ -17,18 +17,19 @@
 
       <div class="navbar">
       <a href="#home">Home</a>
-      <a href="#news">News</a>
+      <a href="#aboutus">About Us</a>
       <div class="dropdown">
         <button class="dropbtn">Dropdown
           <i class="fa fa-caret-down"></i>
         </button>
-        <div class="dropdown-content">
-          <a href="#">Link 1</a>
+        <div class="Shops">
+          <a href="#">Saint Espresso</a>
           <a href="#">Link 2</a>
           <a href="#">Link 3</a>
         </div>
       </div>
     </div>
+
   <h1>LDN sweet tooth</h1>
   <p>At LDN sweet tooth you can find the capital's BEST places for coffee deserts!</p>
   <p><em>Be part of our food loving family</em> and start reviewing your favourite places here!
@@ -41,15 +42,14 @@
   <div class="row halfheight">
     <div class="col-md-3 col-sm-12 mobileheight" >
       <img src="./saintespresso.jpg" alt="A local image" width=200px">
-      <a class="coffee-review" href="cofee/saintespresso2.html">
+      <a class="coffee-review" href="coffee/saintespresso2.html">
         <div class="coffeeshop">
           <h1>Saint Espresso</h1>
         </div>
       </a>
     </div>
-<div class="mapouter">
-  <div class="gmap_canvas">
-    <iframe width="400" height="600" id="gmap_canvas" src="https://maps.google.com/maps?q=296%20Kentish%20Town%20Rd%2C%20Kentish%20Town%2C%20London%20NW5%202TG&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="2" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
+
+
   <!-- Add Bootstrap core JavaScript (T)
   ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
