home page made nicer

--- a/index.html
+++ b/index.html
@@ -10,49 +10,68 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <!-- <a class="navbar-brand" href="#">Navbar</a> -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="navbar">
-      <a href="#home">Home</a>
-      <a href="#news">News</a>
-      <div class="dropdown">
+      <a href="./indext.html">Home</a>
+      <a href="./aboutus.html">About Us</a>
+      <a href="./saintespresso.html">Saint Espresso</a>
+      <a href="./contactus.html">Contact Us</a>
+      <!-- <div class="dropdown">
         <button class="dropbtn">Dropdown
           <i class="fa fa-caret-down"></i>
         </button>
-        <div class="dropdown-content">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
+        <div class="Saint Espresso">
+          <a href="#">Saint Espresso</a> -->
+          <!-- <a href="#">Link 2</a>
+          <a href="#">Link 3</a> -->
         </div>
-      </div>
-    </div>
-  <h1>LDN sweet tooth</h1>
+      <!-- </div>
+    </div> -->
+  <h1>LDN Sweet Tooth</h1>
   <p>At LDN sweet tooth you can find the capital's BEST places for coffee deserts!</p>
-  <p><em>Be part of our food loving family</em> and start reviewing your favourite places here!
+  <p><em>Be part of our food loving family and start reviewing your favourite places here! </em>
   </p>
   <!-- Tab links - you still need to define these in JavaScript-->
   <!-- <div class="tab"> -->
     <!-- <button class="tablinks" onclick="open">Coffee<img src="/Users/janinegeorg/Desktop/coding_course/group_project/images/saint espresso.jpg" alt="image not found" width="200px"> -->
 <!-- </button> -->
+
+
+<!-- <div class="row">
+  <div class="column">
+    <img src="./saintespresso.jpg" alt="Saint Espresso">
+    <a class="coffee-review" href="cofee/saintespresso2.html">
+    </div>
+    <div class="column">
+      <div class="gmap_canvas">
+        <iframe width="400" height="600" id="gmap_canvas" src="https://maps.google.com/maps?q=296%20Kentish%20Town%20Rd%2C%20Kentish%20Town%2C%20London%20NW5%202TG&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="2" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
+      </div> -->
+
+
+
+
+
 <div class="container fullpage">
-  <div class="row halfheight">
-    <div class="col-md-3 col-sm-12 mobileheight" >
-      <img src="./saintespresso.jpg" alt="A local image" width=200px>
-      <a class="coffee-review" href="cofee/saintespresso2.html">
+  <div class="row map">
+    <div class="col-md-3 col-sm-6 mobileheight" >
+      <img width="400" height="600"  src="./saintespresso.jpg" frameborder="2" scrolling="no" marginheight="0" marginwidth="0">
+
         <div class="coffeeshop">
-          <h1>Saint Espresso</h1>
         </div>
       </a>
     </div>
-<div class="mapouter">
+<div class="mapouter col-sm-6">
   <div class="gmap_canvas">
-    <iframe width="400" height="600" id="gmap_canvas" src="https://maps.google.com/maps?q=296%20Kentish%20Town%20Rd%2C%20Kentish%20Town%2C%20London%20NW5%202TG&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="2" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
-  <!-- Add Bootstrap core JavaScript (T) -->
-  <!--  ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
+    <iframe width="400" height="600" id="gmap_canvas" src="https://maps.google.com/maps?q=296%20Kentish%20Town%20Rd%2C%20Kentish%20Town%2C%20London%20NW5%202TG&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="2" scrolling="no" marginheight="0" marginwidth="0">
+    </iframe>
+  </div>
+    <style>.mapouter{position:relative;text-align:right;height:600px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style>
+  </div>
 
+<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
 </body>
 </html>
