--- a/contactus.html
+++ b/contactus.html
@@ -4,20 +4,40 @@
 <head>
   <title>LND Sweet Tooth - Contact us</title>
   <link rel="stylesheet" type="text/css" href="css/styles1.css">
+  <script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
+  <script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-Navbar here
+  <div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#about us">About us</a>
+    <a href="#contact us">Contact us</a>
+    <a href="#saint espresso">Saint Espresso</a>
+  </div>
+  <h1>Contact us!</h1>
+  <p>Have any questions or want to tell us about your favourite coffee place in London, then be in touch using our contact sheet!
+  </p>
 
-Blurb about
+  <div class="container">
+    <form action="action_page.php">
+      <label for="firstname">First Name</label>
+      <input type="text" id="firstname" name="firstname"
+      placeholder="Your first name">
 
-Contact sheet
+      <label for="lastname">Last Name</label>
+      <input type="text" id="lastname" name="lastname"
+      placeholder="Your last name">
 
-Social Media Buttons on bottom
+      <label for="email">Email</label>
+      <input type="text" id="email" name="email"
+      placeholder="Your email">
 
-Make sure to link in the Bootstrap and link to CSS Styles1!
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-<script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
-<script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
+
+      <label for="tellusmore">Tell us more, we're listening!</label>
+      <textarea id="subject" name="subject" placeholder="yourtexthere" style="height:200px">
+      </textarea>
+      <input type="submit" value="submit">
+    </form>
+  </div>
 </body>
 </html>
