--- a/contactus.html
+++ b/contactus.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <div class="topnav">
-    <a class="active" href="../home">Home</a>
-    <a href="../aboutus">About us</a>
+    <a class="active" href="./index.html">Home</a>
+    <a href="./aboutus">About us</a>
     <!-- <a href="../contactus">Contact us</a> -->
-    <a href="../saintespresso">Saint Espresso</a>
+    <a href="./saintespresso">Saint Espresso</a>
   </div>
   <h1>Contact us!</h1>
   <p>Have any questions or want to tell us about your favourite coffee place in London, then be in touch using our contact sheet!
