--- a/contactus.html
+++ b/contactus.html
@@ -10,9 +10,9 @@
 <body>
   <div class="topnav">
     <a class="active" href="./index.html">Home</a>
-    <a href="./aboutus">About us</a>
+    <a href="./aboutus.html">About us</a>
     <!-- <a href="../contactus">Contact us</a> -->
-    <a href="./saintespresso">Saint Espresso</a>
+    <a href="./saintespresso.html">Saint Espresso</a>
   </div>
   <h1>Contact us!</h1>
   <p>Have any questions or want to tell us about your favourite coffee place in London, then be in touch using our contact sheet!
