--- a/contactus.html
+++ b/contactus.html
@@ -32,12 +32,13 @@
       <input type="text" id="email" name="email"
       placeholder="Your email">
 
-
       <label for="tellusmore">Tell us more, we're listening!</label>
       <textarea id="subject" name="subject" placeholder="yourtexthere" style="height:200px">
       </textarea>
       <input type="submit" value="submit">
     </form>
+</form>
+
   </div>
 </body>
 </html>
