--- a/saintespresso.html
+++ b/saintespresso.html
@@ -10,8 +10,8 @@
 <body>
   <div class="topnav">
     <a class="active" href="./index.html">Home</a>
-    <a href="./aboutus">About us</a>
-    <a href="../contactus">Contact us</a>
+    <a href="./aboutus.html">About us</a>
+    <a href="./contactus.html">Contact us</a>
     <!-- <a href="./saintespresso">Saint Espresso</a> -->
   </div>
   <div class="container">
@@ -27,7 +27,5 @@
     The café imports green beans which are they roast in their own roastery. And you can taste the difference.
     Prices are fair and milk alternatives are sold at no extra cost.
     Saint Espresso Kentish Town sports a small outdoor space where you can enjoy your hot/cold beverage in the sun whilst watching people going about their business
-    (one of our favourite passtimes!).
+    (one of our favourite pastimes!).
   </p>
-
-  <p></p>
