--- a/aboutus.html
+++ b/aboutus.html
@@ -5,11 +5,17 @@
   <link rel="stylesheet" type="text/css" href="css/styles2.css">
   </head>
   <body>
-    <div class="topnav">
+    <!-- <div class="topnav">
       <a class="active" href="./index.html">Home</a>
       <a href="./aboutus">About us</a>
-      <!-- <a href="../contactus">Contact us</a> -->
       <a href="./saintespresso">Saint Espresso</a>
+      <a href="./contactus">Contact us</a>
+    </div> -->
+    <div class="topnav">
+      <a class="active" href="./index.html">Home</a>
+      <a href="./aboutus.html">About us</a>
+      <a href="./contactus.html">Contact us</a>
+      <a "./saintespresso.html">Saint Espresso</a> <!-- if you add href it will lead you to an empty page. No idea how to express this in a different way-->
     </div>
     </body>
   <h1>
