--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,7 @@
     </div> -->
     <div class="topnav">
       <a class="active" href="./index.html">Home</a>
-      <a href="./aboutus.html">About us</a>
+      <!-- <a href="./aboutus.html">About us</a> -->
       <a href="./contactus.html">Contact us</a>
       <a "./saintespresso.html">Saint Espresso</a> <!-- if you add href it will lead you to an empty page. No idea how to express this in a different way-->
     </div>
